--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="carousel-inner">
                         <!-- slide 1 -->
                         <div class="carousel-item active" data-bs-interval="2000">
-                          <img src="a.png" class="img-fluid w-100" alt="...">
+                          <img src="images/a.png" class="img-fluid w-100" alt="...">
                           <!-- CHANGED ADDED d-flex flex-column justify-content-center align-items-center h-100 -->
                           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="text-primary semi-transparent-bg fs-sm-5 fs-md-2 fs-xl-1">The perfect plan for your Duniya and Akhirah</h1>
@@ -68,7 +68,7 @@
                         </div>
                         <!-- slide 2 -->
                         <div class="carousel-item" data-bs-interval="2000">
-                          <img src="b.jpg" class="d-block w-100" alt="...">
+                          <img src="images/b.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="text-warning  fs-sm-5 fs-md-2 fs-xl-1">Always welcoming</h1>
                             <p class="text-warning fs-lg-3 fs-md-5 fs-sm-6 fs-xl-3">First see, then book!</p>
@@ -77,7 +77,7 @@
                         </div>
                         <!-- slide 3 -->
                         <div class="carousel-item" data-bs-interval="2000">
-                          <img src="w.jpg" class="d-block w-100" alt="...">
+                          <img src="images/w.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                             <h1 class="text-dark semi-transparent-bg fs-sm-5 fs-md-2 fs-xl-1">Beautiful things are yet to happen</h1>
                             <p class="text-dark semi-transparent-bg fs-lg-3 fs-md-5 fs-sm-6 fs-xl-3">Az-Zuhd is focused on success in both Duniya and Akhirah!</p>
@@ -119,22 +119,22 @@ or access to a gym.
         </div>
         <div class="habit-items">
           <div>
-            <img src="dua-male.png" alt="" />
+            <img src="images/dua-male.png" alt="" />
             <h3>Movement</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
           <div>
-            <img src="dua-male.png" alt="" />
+            <img src="images/dua-male.png" alt="" />
             <h3>Time</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
           <div>
-            <img src="dua-male.png" alt="" />
+            <img src="images/dua-male.png" alt="" />
             <h3>Practice</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
           <div>
-            <img src="dua-male.png" alt="" />
+            <img src="images/dua-male.png" alt="" />
             <h3>Weight Loss</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
@@ -148,7 +148,7 @@ or access to a gym.
         </div>
         <div class="row gx-5 d-flex align-items-center">
             <div class="col-lg-6">                  
-                <img class="img-fluid" src="banner.png" alt="">
+                <img class="img-fluid" src="images/banner.png" alt="">
             </div>
 
             <div class="col-lg-6">      
@@ -294,7 +294,7 @@ or access to a gym.
                 <!-- Accordion Ends -->
         
                 <div class="col col-lg-6 col-12 d-flex align-items-center">
-                    <img src="party.jpg" class="w-75" alt="...">
+                    <img src="images/party.jpg" class="w-75" alt="...">
                 </div>
         
             </div>
@@ -344,8 +344,8 @@ or access to a gym.
                   <!-- CHANGED   -->  
                   <!-- <div class="d-block"><h6 class="text-light">Get the App</h6> -->
                     <div class="text-white text-center p-6 mt-10"><h6 class="text-light">Get the App</h6>
-                      <a href="https://apps.apple.com/au/app/apple-business-essentials/id1588151344" target="_blank"><img width="100" height="70" src="apple.png" alt="App store"></a>
-                      <a href="https://apps.apple.com/us/app/google-maps/id585027354" target="_blank"><img width="100" height="70" src="google.png" alt="Google play"></a>
+                      <a href="https://apps.apple.com/au/app/apple-business-essentials/id1588151344" target="_blank"><img width="100" height="70" src="images/apple.png" alt="App store"></a>
+                      <a href="https://apps.apple.com/us/app/google-maps/id585027354" target="_blank"><img width="100" height="70" src="images/google.png" alt="Google play"></a>
                     </div>
                 </div>
             </div>
