--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Resources</a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="i.html" target="_blank">Quran</a></li>
-                      <li><a class="dropdown-item" href="#">Hadith</a></li>
-                      <li><a class="dropdown-item" href="#">Tafsir</a></li>
+                      <li><a class="dropdown-item" href="https://quran.com/" target="_blank">Quran</a></li>
+                      <li><a class="dropdown-item" href="https://sunnah.com/">Hadith</a></li>
+                      <li><a class="dropdown-item" href="https://www.altafsir.com/">Tafsir</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Dua-Cards</a></li>
+                      <li><a class="dropdown-item" href="http://imaanstar.com/?page_id=177">Dua-Cards</a></li>
                     </ul>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">E-Books</a>
+                    <a class="nav-link" href="https://www.kalamullah.com/">E-Books</a>
                   </li> 
                   <li  class="nav-item">
-                    <a class="btn btn-navy mb-lg-2 m-0 text-white fw-bold fs-lg-3 fs-sm-5 px-lg-4 px-sm-2 py-lg-2 py-0 text-decoration-none" href="zuhdplan.html" target="_blank">Join Az-Zuhd Plan!</a>
+                    <a class="btn btn-navy mb-lg-2 m-0 text-white fw-bold fs-lg-3 fs-sm-5 px-lg-4 px-sm-2 py-lg-2 py-0 text-decoration-none" href="html/zuhdplan.html" target="_blank">Join Az-Zuhd Plan!</a>
                   </li>
                 </ul>
               </div>
