--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Resources</a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="https://quran.com/" target="_blank">Quran</a></li>
-                      <li><a class="dropdown-item" href="https://sunnah.com/">Hadith</a></li>
-                      <li><a class="dropdown-item" href="https://www.altafsir.com/">Tafsir</a></li>
+                      <li><a class="dropdown-item" href="https://sunnah.com/" target="_blank">Hadith</a></li>
+                      <li><a class="dropdown-item" href="https://www.altafsir.com/" target="_blank">Tafsir</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="http://imaanstar.com/?page_id=177">Dua-Cards</a></li>
+                      <li><a class="dropdown-item" href="http://imaanstar.com/?page_id=177" target="_blank">Dua-Cards</a></li>
                     </ul>
                   </li> 
                   <li class="nav-item">
