--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Navigation Part -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-              <a class="navbar-brand text-primary" href="#">AZ-ZUHD</a>
+              <a class="navbar-brand text-primary" href="index.html">AZ-ZUHD</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="about.html" target="_blank">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Resources</a>
@@ -39,11 +39,11 @@
                       <li><a class="dropdown-item" href="https://sunnah.com/" target="_blank">Hadith</a></li>
                       <li><a class="dropdown-item" href="https://www.altafsir.com/" target="_blank">Tafsir</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="http://imaanstar.com/?page_id=177" target="_blank">Dua-Cards</a></li>
+                      <li><a class="dropdown-item" href="html/dua.html" target="_blank">Dua-Cards</a></li>
                     </ul>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="https://www.kalamullah.com/">E-Books</a>
+                    <a class="nav-link" href="https://www.kalamullah.com/" target="_blank">E-Books</a>
                   </li> 
                   <li  class="nav-item">
                     <a class="btn btn-navy mb-lg-2 m-0 text-white fw-bold fs-lg-3 fs-sm-5 px-lg-4 px-sm-2 py-lg-2 py-0 text-decoration-none" href="html/zuhdplan.html" target="_blank">Join Az-Zuhd Plan!</a>
